apps/pocket-id/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1411
